Add graph property to dataset metadata