@@ -10,8 +10,8 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.ws.rs.core.MediaType;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Clock;
 import java.util.Map;
 import java.util.SortedMap;
@@ -38,7 +38,7 @@ import static nl.knaw.huygens.timbuctoo.v5.util.RdfConstants.XSD_DATETIMESTAMP;
 public class RawUploadRdfSaver implements Saver<String> {
 
   private static final Logger LOG = LoggerFactory.getLogger(RawUploadRdfSaver.class);
-  private final String dataSetUri;
+  private final String graph;
   private final RdfSerializer saver;
   private String prevCollection;
   private int curEntity;
@@ -53,14 +53,14 @@ public class RawUploadRdfSaver implements Saver<String> {
     this.curEntity = 0;
     this.curCollection = 0;
 
-    this.dataSetUri = dataSet.getBaseUri();
+    this.graph = dataSet.getGraph();
     String prefix = dataSet.getUriPrefix();
     fileUri = prefix + "rawData/" + encode(fileName) + "/";
-    this.saver.onRelation(fileUri, RDF_TYPE, TIM_TABULAR_FILE, this.dataSetUri);
-    this.saver.onRelation(this.dataSetUri, PROV_DERIVED_FROM, fileUri, this.dataSetUri);
-    this.saver.onValue(fileUri, TIM_MIMETYPE, mimeType.toString(), STRING, this.dataSetUri);
-    this.saver.onValue(fileUri, RDFS_LABEL, origFilename, STRING, this.dataSetUri);
-    this.saver.onValue(fileUri, PROV_ATTIME, clock.instant().toString(), XSD_DATETIMESTAMP, this.dataSetUri);
+    this.saver.onRelation(fileUri, RDF_TYPE, TIM_TABULAR_FILE, this.graph);
+    this.saver.onRelation(this.graph, PROV_DERIVED_FROM, fileUri, this.graph);
+    this.saver.onValue(fileUri, TIM_MIMETYPE, mimeType.toString(), STRING, this.graph);
+    this.saver.onValue(fileUri, RDFS_LABEL, origFilename, STRING, this.graph);
+    this.saver.onValue(fileUri, PROV_ATTIME, clock.instant().toString(), XSD_DATETIMESTAMP, this.graph);
     this.prevCollection = fileUri;
   }
 
@@ -69,8 +69,8 @@ public class RawUploadRdfSaver implements Saver<String> {
     String subject = rawEntity(++curEntity);
 
     try {
-      saver.onRelation(subject, RDF_TYPE, collection, dataSetUri);
-      saver.onRelation(collection, TIM_HAS_ROW, subject, dataSetUri);
+      saver.onRelation(subject, RDF_TYPE, collection, graph);
+      saver.onRelation(collection, TIM_HAS_ROW, subject, graph);
     } catch (LogStorageFailedException e) {
       LOG.error("Could not save entity", e);
     }
@@ -78,7 +78,7 @@ public class RawUploadRdfSaver implements Saver<String> {
     for (Map.Entry<String, String> property : currentProperties.entrySet()) {
       try {
         String propName = propertyDescription(property.getKey());
-        saver.onValue(subject, propName, property.getValue(), STRING, dataSetUri);
+        saver.onValue(subject, propName, property.getValue(), STRING, graph);
       } catch (LogStorageFailedException e) {
         LOG.error("Could not store value", e);
       }
@@ -86,7 +86,7 @@ public class RawUploadRdfSaver implements Saver<String> {
 
     String timIdPropname = propertyDescription("tim_id");
     try {
-      saver.onValue(subject, timIdPropname, UUID.randomUUID().toString(), STRING, dataSetUri);
+      saver.onValue(subject, timIdPropname, UUID.randomUUID().toString(), STRING, graph);
     } catch (LogStorageFailedException e) {
       LOG.error("Could not add tim_id property.");
     }
@@ -100,11 +100,11 @@ public class RawUploadRdfSaver implements Saver<String> {
     String subject = rawCollection(++curCollection);
 
     try {
-      saver.onRelation(subject, RDF_TYPE, subject + "type", dataSetUri);
-      saver.onRelation(subject, RDF_TYPE, TIM_TABULAR_COLLECTION, dataSetUri);
-      saver.onValue(subject, RDFS_LABEL, collectionName, STRING, dataSetUri);
-      saver.onRelation(fileUri, TIM_HASCOLLECTION, subject, dataSetUri); //for getting all collections in a file
-      saver.onRelation(prevCollection, TIMBUCTOO_NEXT, subject, dataSetUri); //for getting the ordered collections
+      saver.onRelation(subject, RDF_TYPE, subject + "type", graph);
+      saver.onRelation(subject, RDF_TYPE, TIM_TABULAR_COLLECTION, graph);
+      saver.onValue(subject, RDFS_LABEL, collectionName, STRING, graph);
+      saver.onRelation(fileUri, TIM_HASCOLLECTION, subject, graph); //for getting all collections in a file
+      saver.onRelation(prevCollection, TIMBUCTOO_NEXT, subject, graph); //for getting the ordered collections
       prevCollection = subject;
     } catch (LogStorageFailedException e) {
       LOG.error("Could not store value", e);
@@ -130,12 +130,12 @@ public class RawUploadRdfSaver implements Saver<String> {
   public String addPropertyDescription(String collection, String propertyName, Integer id, String prevPropUri) {
     String propertyUri = propertyDescription(propertyName);
     try {
-      saver.onRelation(propertyUri, RDF_TYPE, TIM_PROP_DESC, dataSetUri);
-      saver.onRelation(collection, TIM_HAS_PROPERTY, propertyUri, dataSetUri);
-      saver.onValue(propertyUri, TIM_PROP_ID, "" + id, INTEGER, dataSetUri);
-      saver.onValue(propertyUri, RDFS_LABEL, propertyName, STRING, dataSetUri);
+      saver.onRelation(propertyUri, RDF_TYPE, TIM_PROP_DESC, graph);
+      saver.onRelation(collection, TIM_HAS_PROPERTY, propertyUri, graph);
+      saver.onValue(propertyUri, TIM_PROP_ID, "" + id, INTEGER, graph);
+      saver.onValue(propertyUri, RDFS_LABEL, propertyName, STRING, graph);
       if (prevPropUri != null) {
-        saver.onRelation(prevPropUri, TIMBUCTOO_NEXT, propertyUri, dataSetUri);
+        saver.onRelation(prevPropUri, TIMBUCTOO_NEXT, propertyUri, graph);
       }
     } catch (LogStorageFailedException e) {
       LOG.error("Could not add property description", e);
@@ -157,11 +157,6 @@ public class RawUploadRdfSaver implements Saver<String> {
   }
 
   private static String encode(String input) {
-    try {
-      return URLEncoder.encode(input, "UTF-8");
-    } catch (UnsupportedEncodingException e) {
-      //will never happen
-      throw new RuntimeException(e);
-    }
+    return URLEncoder.encode(input, StandardCharsets.UTF_8);
   }
 }
